GiveInGoodHandsApp - v0.7.3 - add Spring Security